fixed spacing

--- a/lesson2/lesson2/medium.css
+++ b/lesson2/lesson2/medium.css
@@ -25,7 +25,4 @@
 		border: 1px solid #bbb;
 	}
 
-	.contrast {
-		display: grid;
-	}
 }
